Web Application Frontend 07/05/2023 5:53PM     -- Joseph Craig
    - Fixed issue where test files were not being received from the backend
    - Display text file line by line by the next button command
    - Trimmed the question that gets displayed
    - Fixed issues on the backend that stopped this functionality from working

-- Joseph Craig

Changes to be committed:
	modified:   src/main/java/com/example/mipeacebackendspringboot/TestOrderController.java
	modified:   src/main/resources/QuestionsFiles/Agreeableness_B.txt